# leptonreader

./: .gitignore  LeptonReader.spec  README.md  app.py  lepton.py  leptonreader.py  pyproject.toml  requirements.txt
leptonreader/: __init__.py  assets.py  core.py  gui.py
